--- a/ui/main.css
+++ b/ui/main.css
@@ -37,6 +37,7 @@ body {
     background-color: rgb(54, 57, 63);
     border-radius: 100%;
     vertical-align: middle;
+    margin-bottom: 10px;
 }
 
 .sidenav .server:hover {
@@ -77,7 +78,18 @@ body {
     font-weight: bolder;
 }
 
-.sidenav p::selection {
+.server img {
+    height: 48px;
+    width: 48px;
+    border-radius: 100%;
+    pointer-events: none;
+}
+
+.sidenav .server:hover > img {
+    border-radius: 35%;
+}
+
+.sidenav p::selection, .sidenav a::selection, .sidenav::selection, .sidenav div::selection, .sidenav img::selection {
     background: none;
 }
 
@@ -89,7 +101,7 @@ body {
 
 .sidenav hr {
     width: 50%;
-    color: rgb(65, 65, 68)
+    color: rgb(65, 65, 68);
 }
 
 .actionbar {
@@ -155,6 +167,10 @@ body {
     font-weight: lighter;
 }
 
+.user p::selection, .user img::selection, .user::selection, .user div::selection{
+    background: none;
+}
+
 .infobar {
     width: 100%;
     height: 48px;
@@ -173,6 +189,19 @@ body {
     box-shadow: -1px 1px 1px rgba(0,0,0,0.4);
 }
 
+.actioninfo p {
+    font-weight: bold;
+    font-size: 12px;
+    margin-left: 13px;
+    margin-right: 13px;
+    margin-top: 18px;
+    pointer-events: none;
+}
+
+.actioninfo p::selection, .actioninfo::selection, .actionbar::selection {
+    background: none;
+}
+
 .mainbox {
     width: 100%;
     height: 100%;
@@ -187,4 +216,28 @@ body {
     display: inline-block;
     position: fixed;
     right: 0;
+}
+
+.actionbar .chancontainer {
+    margin-top: 48px;
+    margin-bottom: 53px;
+    position: fixed;
+    top: 0;
+    height: calc(100% - 111px);
+    width: 230px;
+    padding-top: 10px;
+    padding-left: 10px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.actionbar .chanhead {
+    font-weight: 500;
+    color: rgb(142, 146, 151);
+    font-size: 11px;
+    pointer-events: none;
+}
+
+.actionbar p::selection, .actionbar .chancontainer::selection {
+    background: none;
 }
