--- a/ui/main.css
+++ b/ui/main.css
@@ -364,3 +364,44 @@ body {
 .memberbar .memberdesc::selection, .memberbar .membername::selection, .memberbar .avatar::selection, .memberbar .member::selection, .memberbar::selection {
     background: none;
 }
+
+.mainbox .messagebox {
+    display: inline-block;
+    position: fixed;
+    left: 312px;
+    top: 48px;
+    bottom: 0;
+    right: 240px;
+}
+
+.messagebox .messageinput {
+    width: calc(100% - 30px);
+    height: 35px;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 20px;
+    box-sizing : border-box;
+    margin-left: 15px;
+    margin-right: 15px;
+    border: none;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: rgb(255, 255, 255);
+}
+
+.messagebox .messageinput::placeholder {
+    color: rgb(106, 110, 116);
+}
+
+.messagebox .messageinput:focus {
+    outline: none;
+}
+
+.messagebox .messages {
+    height: calc(100% - 75px);
+    width: calc(100% - 30px);
+    margin-left: 15px;
+    margin-right: 15px;
+    border-bottom: 1px solid rgb(66, 69, 74);
+}
