--- a/ui/main.css
+++ b/ui/main.css
@@ -23,11 +23,11 @@ body {
     top: 0;
     left: 0;
     background-color: rgb(32, 34, 37);
-    overflow-x: hidden;
     text-align: center;
     padding-top: 10px;
     float: left;
     z-index: 1;
+    overflow-x: visible;
 }
 
 .sidenav .server {
@@ -39,6 +39,7 @@ body {
     border-radius: 100%;
     vertical-align: middle;
     margin-bottom: 10px;
+    position: relative;
 }
 
 .sidenav .server:hover {
@@ -105,6 +106,28 @@ body {
     color: rgb(65, 65, 68);
 }
 
+.tooltip {
+    visibility: hidden;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 99 !important;
+    top: -5px;
+    left: 105%; 
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: 12px;
+    font-weight: 550;
+    transform: translate(5px, 15px);
+}
+
+.server:hover .tooltip {
+    visibility: visible;
+}
+
 .actionbar {
     height: 100%;
     width: 240px;
@@ -113,7 +136,7 @@ body {
     left: 0;
     top: 0;
     margin-left: 72px;
-    z-index: 1;
+    z-index: 0;
 }
 
 .main {
@@ -161,6 +184,10 @@ body {
 .user .name {
     font-size: 12px;
     font-weight: bolder;
+    text-overflow: ellipsis;
+    width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .user .discriminator {
@@ -175,7 +202,7 @@ body {
     cursor: pointer;
     color: rgb(185, 187, 190);
     position: fixed;
-    margin-left: 60px;
+    left: 275px;
     bottom: 16.5px;
 }
 
@@ -430,6 +457,7 @@ body {
     display: flex;
     flex-direction: column-reverse;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .messages .message {
