--- a/ui/main.css
+++ b/ui/main.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Red Hat Text', sans-serif;
     margin: 0;
     padding: 0;
+    color: rgb(255, 255, 255);
 }
 
 .sidenav {
@@ -236,6 +237,7 @@ body {
     margin-left: 20px;
     margin-top: 12.5px;
     margin-right: 4px;
+    transform: translateY(-18px);
 }
 
 .infobar .chantitle {
@@ -363,7 +365,7 @@ body {
     font-size: 15px;
     margin: 0;
     width: 150px;
-    transform: translateY(-10px);
+    padding-bottom: 5px;
     color: rgb(126, 129, 134);
     font-weight: 500;
     pointer-events: none;
@@ -381,7 +383,7 @@ body {
     height: 15px;
     color: rgb(114, 118, 125);
     display: inline-block;
-    transform: translateY(-12px);
+    transform: translateY(-30px);
 }
 
 .chan .channame {
@@ -534,7 +536,7 @@ body {
     display: flex;
     flex-direction: column-reverse;
     overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-x: scroll;
 }
 
 .messages .message {
