Fix some CSS on macOS and add macOS build script

--- a/ui/main.css
+++ b/ui/main.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Red Hat Text', sans-serif;
     margin: 0;
     padding: 0;
+    color: rgb(255, 255, 255);
 }
 
 .sidenav {
