--- a/ui/main.css
+++ b/ui/main.css
@@ -619,3 +619,16 @@ body {
 .nowrap {
     white-space: nowrap;
 }
+
+.blocker {
+  display: none;
+  position: fixed;
+  z-index: 99 !important;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; 
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
