--- a/ui/main.css
+++ b/ui/main.css
@@ -629,6 +629,7 @@ body {
   background-color: rgba(0,0,0,0.4);
 }
 
+/* ˅˅˅ From https://loading.io/css/ ˅˅˅ */
 .lds-roller {
     display: inline-block;
     position: fixed;
@@ -716,3 +717,4 @@ body {
     }
   }
   
+  /* ^^^ From https://loading.io/css/ ^^^ */
