--- a/ui/main.css
+++ b/ui/main.css
@@ -672,9 +672,53 @@ body {
 }
 
 .imageattachment img {
-    height: 100%;
+    height: auto;
     width: auto;
+    max-height: 100%;
     max-width: 100%;
+    cursor: pointer;
+}
+
+.message .attachment {
+    padding: 10px;
+    max-width: 520px;
+    width: calc(100% - 75px);
+    transform: translateY(-32px);
+    margin-left: 58px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    background-color: rgb(52, 54, 60);
+    border-radius: 5px;
+}
+
+.attachment .fa-file-alt {
+    font-size: 28px;
+    height: 28px;
+    width: 28px;
+    margin-right: 8px;
+    display: inline-block;
+}
+
+.attachment .fa-download {
+    font-size: 20px;
+    height: 20px;
+    width: 20px;
+    margin-top: 5px;
+    float: right;
+    cursor: pointer;
+}
+
+.attachment p {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    font-size: 12px;
+    color: rgb(23, 120, 160);
+    display: inline-block;
+    margin: 0;
+    margin-bottom: 5px;
+    width: calc(100% - 60px);
     cursor: pointer;
 }
 
