--- a/ui/main.css
+++ b/ui/main.css
@@ -722,6 +722,84 @@ body {
     cursor: pointer;
 }
 
+.message .embed {
+    max-width: 436px;
+    width: auto;
+    height: auto;
+    background-color: rgb(47, 49, 54);
+    border-left: 4px solid rgb(255, 255, 255);
+    border-radius: 3px 0 0 3px;
+    padding-left: 3px;
+    border-radius: 6px;
+    padding: 10px;
+    transform: translateY(-32px);
+    margin-top: 20px;
+    margin-left: 58px;
+    overflow-x: hidden;
+}
+
+.embed .provider {
+    color: rgb(140, 142, 145);
+    font-size: 8px;
+    cursor: pointer;
+    width: 100%;
+    float: left;
+}
+
+.embed .provider:hover {
+    text-decoration: underline;
+}
+
+.embed .author {
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    cursor: pointer;
+    width: 100%;
+    float: left;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.embed .author:hover {
+    text-decoration: underline;
+}
+
+.embed .title {
+    color: rgb(0, 176, 244);
+    font-size: 15px;
+    cursor: pointer;
+    width: 100%;
+    float: left;
+    padding-bottom: 5px;
+}
+
+.embed .title:hover {
+    text-decoration: underline;
+}
+
+.embed .imageattachment {
+    height: 250px;
+    width: calc(100% - 65px);
+    margin-left: 58px;
+    transform: translateY(-32px);
+}
+
+.embed img {
+    height: auto;
+    width: auto;
+    max-height: 100%;
+    max-width: 100%;
+    cursor: pointer;
+}
+
+.embed iframe {
+    height: auto;
+    width: auto;
+    max-width: 300px; 
+    max-height: 200px;
+    border: none;
+}
+
 .message .msgavatar::selection, .message::selection, .messagebox::selection {
     background: none;
 }
