--- a/ui/main.css
+++ b/ui/main.css
@@ -678,7 +678,6 @@ body {
 }
 
 .message .imageattachment {
-    height: 250px;
     width: calc(100% - 65px);
     margin-left: 58px;
     transform: translateY(-32px);
@@ -688,7 +687,7 @@ body {
 .imageattachment img {
     height: auto;
     width: auto;
-    max-height: 100%;
+    max-height: 250px;
     max-width: 100%;
     min-width: 250px;
     cursor: pointer;
