--- a/ui/main.css
+++ b/ui/main.css
@@ -3,6 +3,12 @@
     zoom: 1.0;
 }
 
+@font-face {
+    font-family: Noto;
+    src: local("Noto Emoji"), local("Noto Color Emoji"), local("Noto"), 
+    url("https://cdn.rawgit.com/googlei18n/noto-emoji/master/fonts/NotoEmoji-Regular.ttf");
+}
+
 html {
     height: 100%;
     margin: 0;
@@ -11,7 +17,7 @@ html {
 
 body {
     height: 100%;
-    font-family: 'Red Hat Text', sans-serif;
+    font-family: 'Red Hat Text', 'Noto Color Emoji', 'Noto Emoji', sans-serif;
     margin: 0;
     padding: 0;
     color: rgb(255, 255, 255);
