--- a/ui/main.css
+++ b/ui/main.css
@@ -161,7 +161,7 @@ body {
     left: 0;
     top: 0;
     margin-left: 72px;
-    z-index: 0;
+    z-index: 1;
 }
 
 .main {
@@ -518,19 +518,15 @@ body {
 .messagebox .fileupload {
     width: 40px;
     height: 35px;
-    border-radius: 4px;
     position: absolute;
     bottom: 20px;
     background-color: rgb(64, 68, 75);
     margin-left: 15px;
     border: none;
     border-right: 2px solid rgb(54, 57, 63);
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
     z-index: 1;
-}
-
-.messagebox .fileupload {
     outline: none;
 }
 
@@ -547,14 +543,14 @@ body {
 }
 
 .messagebox .messageinput {
-    width: calc(100% - 30px);
+    width: calc(100% - 70px);
     height: 35px;
     border-radius: 4px;
     position: absolute;
     bottom: 20px;
     box-sizing : border-box;
     margin-left: 15px;
-    margin-right: 15px;
+    margin-right: 55px;
     border: none;
     padding: 7px;
     padding-left: 50px;
@@ -564,6 +560,33 @@ body {
     resize: none;
     font-family: inherit;
     font-size: inherit;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.messagebox .emojiselect {
+    width: 40px;
+    height: 35px;
+    background-color: rgb(64, 68, 75);
+    position: absolute;
+    bottom: 20px;
+    border: none;
+    margin-left: calc(100% - 55px);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    outline: none;
+}
+
+.emojiselect .fa-grin {
+    color: rgb(171, 171, 171);
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+    margin-left: 2px;
+}
+
+.messagebox .emojiselect:hover > .fa-grin {
+    color: rgb(255, 255, 255)
 }
 
 .messagebox .inputborder {
@@ -983,3 +1006,214 @@ body {
   }
   
   /* ^^^ From https://loading.io/css/ ^^^ */
+
+
+  .emoji-picker {
+    border: 1px solid rgb(31, 33, 36);
+    border-radius: 5px;
+    background: rgb(47, 49, 54);
+    width: 300px;
+    font-family: inherit;
+    opacity: 0;
+    transition: opacity 0.3s;
+    overflow: hidden;
+    color: rgb(185, 187, 190);
+  }
+  
+  .emoji-picker.visible {
+    opacity: 1;
+  }
+  
+  .emoji-picker__content {
+    padding: 0.5em;
+    height: 20rem;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .emoji-picker__preview {
+    height: 2em;
+    padding: 0.5em;
+    border-top: 1px solid rgb(31, 33, 36);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  
+  .emoji-picker__preview-emoji {
+    font-size: 2em;
+    margin-right: 0.25em;
+    font-family: inherit;
+  }
+  
+  .emoji-picker__preview-name {
+    color: rgb(185, 187, 190);
+    font-size: 0.85em;
+    overflow-wrap: break-word;
+    word-break: break-all;
+  }
+  
+  .emoji-picker__tabs {
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  
+  .emoji-picker__tab {
+    font-size: 1.5rem;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    flex-grow: 1;
+    text-align: center;
+    color: rgb(185, 187, 190);
+    border-radius: 3px;
+    transition: background 0.25s;
+  }
+  
+  .emoji-picker__tab:hover {
+    background: #E8F4F9;
+  }
+  
+  .emoji-picker__tab svg {
+    padding: 0.5rem;
+  }
+  
+  .emoji-picker__tab.active {
+    background: #4F81E5;
+    color: rgb(185, 187, 190);
+  }
+  
+  .emoji-picker__tab-body {
+    margin-top: 0.5em;
+    transform: translateX(25rem);
+    transition: transform 0.25s;
+    position: absolute;
+  }
+  
+  .emoji-picker__tab-body h2 {
+    font-size: 0.85rem;
+    color: rgb(185, 187, 190);
+    margin: 0;
+    text-align: left;
+  }
+  
+  .emoji-picker__tab-body.active {
+    display: block;
+    transform: translateX(0);
+  }
+  
+  .emoji-picker__emojis {
+    height: 16.5rem;
+    overflow-y: scroll;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    width: 280px;
+    margin: auto;
+    overflow-x: hidden;
+  }
+  
+  .emoji-picker__emojis.search-results {
+    height: 21rem;
+  }
+  
+  .emoji-picker__emoji {
+    background: transparent;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 19px;
+    width: 1.5em;
+    height: 1.5em;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    font-family: inherit;
+  }
+  
+  .emoji-picker__emoji:focus, .emoji-picker__emoji:hover {
+    background: #E8F4F9;
+  }
+  
+  .emoji-picker__search-container {
+    margin: 0.5em;
+    position: relative;
+    height: 2em;
+    display: flex;
+  }
+  
+  .emoji-picker__search {
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 3px;
+    border: 1px solid rgb(31, 33, 36);
+    padding-right: 2em;
+    padding: 0.5em 2.25em 0.5em 0.5em;
+    font-size: 0.85rem;
+    outline: none;
+    background-color: rgb(32, 34, 37);
+    color: rgb(185, 187, 190);
+  }
+  
+  .emoji-picker__search:focus {
+    border: 1px solid #4F81E5;
+  }
+  
+  .emoji-picker__search-icon {
+    position: absolute;
+    color: #CCCCCC;
+    width: 1em;
+    height: 1em;
+    right: 0.75em;
+    top: calc(50% - 0.5em);
+  }
+  
+  .emoji-picker__search-not-found {
+    color: #666666;
+    text-align: center;
+    margin-top: 2em;
+  }
+  
+  .emoji-picker__search-not-found-icon {
+    font-size: 3em;
+  }
+  
+  .emoji-picker__search-not-found h2 {
+    margin: 0.5em 0;
+    font-size: 1em;
+  }
+  
+  .emoji-picker__variant-overlay {
+    background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 23rem;
+    height: 27.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .emoji-picker__variant-popup {
+    background: #FFFFFF;
+    margin: 0.5em;
+    padding: 0.5em;
+    text-align: center;
+  }
+  
+  .emoji-picker__variant-popup-close-button {
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    position: absolute;
+    right: 0.5em;
+    padding: 0;
+    top: calc(50% - 0.75em);
+    height: 1.5em;
+    width: 1.5em;
+    font-size: 1.5em;
+  }
