--- a/ui/main.css
+++ b/ui/main.css
@@ -775,6 +775,7 @@ body {
     max-width: 100%;
     min-width: 250px;
     cursor: pointer;
+    object-fit: scale-down;
 }
 
 .message .attachment {
@@ -888,6 +889,7 @@ body {
     max-height: 100%;
     max-width: 100%;
     cursor: pointer;
+    object-fit: scale-down;
 }
 
 .embed iframe {
