--- a/ui/main.css
+++ b/ui/main.css
@@ -908,6 +908,77 @@ body {
     margin-top: 10px;
     margin-left: 10px;
 }
+.descrip .mention {
+    background-color: rgb(61, 65, 79);
+    color: rgb(114, 137, 218);
+    white-space: nowrap;
+    padding: 0;
+    margin: 0;
+    width: auto;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.descrip .mention:hover {
+    background-color: rgb(96, 113, 172);
+    color: rgb(255, 255, 255);
+}
+
+.descrip .selfmention {
+    color: rgb(114, 137, 218);
+    white-space: nowrap;
+    padding: 0;
+    margin: 0;
+    width: auto;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.descrip.selfmention {
+    background-color: rgb(75, 68, 59);
+    border-left: 4px solid rgb(250, 166, 26);
+    border-radius: 3px 0 0 3px;
+    padding-left: 3px;
+}
+
+.descrip .selfmention:hover {
+    text-decoration: underline;
+}
+
+.descrip .quoteblock {
+    display: inline-block;
+    height: 16px;
+    width: 0;
+    border-left: 3px solid;
+    border-color: rgb(81, 84, 93);
+    transform: translateY(5px);
+    margin-right: 4px;
+}
+
+.descrip code {
+    font-family: inherit;
+    border-radius: 5px;
+}
+
+.descrip pre {
+    font-family: inherit;
+    word-wrap: break-word;
+    white-space: normal;
+}
+
+.descrip .link {
+    color: rgb(13, 146, 198);
+    padding: 0;
+    margin: 0;
+    width: auto;
+    display: inline-block;
+    cursor: pointer;
+    max-width: 100%;
+}
+
+.descrip .link:hover {
+    text-decoration: underline;
+}
 
 .message .msgavatar::selection, .message::selection, .messagebox::selection {
     background: none;
