--- a/ui/main.css
+++ b/ui/main.css
@@ -271,7 +271,6 @@ body {
     margin-left: 20px;
     margin-top: 12.5px;
     margin-right: 4px;
-    transform: translateY(-18px);
 }
 
 .infobar .chantitle {
@@ -402,7 +401,7 @@ body {
     font-size: 15px;
     margin: 0;
     width: 150px;
-    padding-bottom: 5px;
+    transform: translateY(-10px);
     color: rgb(126, 129, 134);
     font-weight: 500;
     pointer-events: none;
@@ -418,13 +417,14 @@ body {
 .chan .fa-hashtag {
     color: rgb(114, 118, 125);
     display: inline-block;
-    transform: translateY(-2px);
 }
 
 .chan .channame {
     color: rgb(114, 118, 125);
     font-size: 14px;
     font-weight: 500;
+    width: 100%;
+    max-width: 180px;
     display: inline-block;
     padding-left: 4px;
     pointer-events: none;
@@ -572,7 +572,7 @@ body {
     color: rgb(255, 255, 255);
     background-color: rgb(64, 68, 75);
     resize: none;
-    font-family: inherit;
+    font-family: 'Red Hat Text', 'Noto Color Emoji', 'Noto Emoji', sans-serif;;
     font-size: inherit;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
@@ -594,7 +594,7 @@ body {
 .emojiselect .fa-grin {
     color: rgb(171, 171, 171);
     font-size: 20px;
-    width: 20px;
+    width: 12px;
     height: 20px;
     margin-left: 2px;
 }
