--- a/ui/main.css
+++ b/ui/main.css
@@ -151,8 +151,11 @@ body {
     margin-left: 19px;
 }
 
+.tooltip-text {
+    display: none;
+}
+
 .tooltip {
-    visibility: hidden;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     text-align: center;
@@ -160,18 +163,11 @@ body {
     border-radius: 6px;
     position: absolute;
     z-index: 99 !important;
-    top: -5px;
-    left: 105%; 
     overflow: hidden;
     white-space: nowrap;
     font-size: 12px;
     font-weight: 550;
-    transform: translate(5px, 15px);
     display: none;
-}
-
-.server:hover .tooltip {
-    visibility: hidden;
 }
 
 .actionbar {
