--- a/ui/main.css
+++ b/ui/main.css
@@ -734,6 +734,8 @@ body {
     font-weight: 300;
     white-space: normal;
     overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .msgbody .customemoji {
