fix some styles

--- a/ui/emoji-picker.css
+++ b/ui/emoji-picker.css
@@ -8,6 +8,7 @@
     transition: opacity 0.3s;
     overflow: hidden;
     color: rgb(185, 187, 190);
+    -ms-overflow-style: auto;
   }
   
   .emoji-picker.visible {
