Fix file uploader

--- a/ui/main.css
+++ b/ui/main.css
@@ -589,6 +589,8 @@ body {
     width: 20px;
     height: 20px;
     margin-left: 2px;
+    transform: translateY(2px);
+    cursor: pointer;
 }
 
 .messagebox .fileupload:hover > .fa-plus-circle {
@@ -904,6 +906,7 @@ body {
     margin-bottom: 5px;
     width: calc(100% - 60px);
     cursor: pointer;
+    transform: translateY(-6px);
 }
 
 .message .embed {
@@ -1088,6 +1091,53 @@ body {
   overflow: auto; 
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
+}
+
+.alertbox {
+    display: none;
+    width: auto;
+    height: auto;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    background-color: rgb(32, 34, 37);
+    text-align: center;
+    padding: 10px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+    z-index: 99;
+}
+
+.alertbox .alerttitle {
+    font-weight: bolder;
+    font-size: 16px;
+    color: rgb(255,255,255);
+    margin-bottom: 15px;
+}
+
+.alertbox .alertmsg {
+    font-weight: normal;
+    font-size: 12px;
+    color: rgb(255,255,255);
+    margin-bottom: 15px;
+}
+
+.alertbox .alertclose {
+    font-size: 12px;
+    margin-bottom: 10px;
+    height: 25px;
+    width: 35px;
+    border-radius: 4px;
+    background-color: rgb(112, 130, 196);
+    text-align: center;
+    border: none;
+    color: rgb(255, 255, 255);
+    outline: none;
+}
+
+.alertbox .alertclose:hover {
+    background-color: rgb(100, 121, 197);
 }
 
 /* ˅˅˅ From https://loading.io/css/ ˅˅˅ */
