--- a/ui/main.css
+++ b/ui/main.css
@@ -1114,6 +1114,8 @@ body {
     font-size: 16px;
     color: rgb(255,255,255);
     margin-bottom: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .alertbox .alertmsg {
