--- a/ui/main.css
+++ b/ui/main.css
@@ -1129,17 +1129,33 @@ body {
     font-size: 12px;
     margin-bottom: 10px;
     height: 25px;
-    width: 35px;
+    width: 34px;
     border-radius: 4px;
     background-color: rgb(112, 130, 196);
     text-align: center;
     border: none;
     color: rgb(255, 255, 255);
     outline: none;
+    padding-left: 8px;
+    padding-right: 10px;
+    cursor: pointer;
 }
 
 .alertbox .alertclose:hover {
     background-color: rgb(100, 121, 197);
+}
+
+.confirmblock {
+    display: none;
+    position: fixed;
+    z-index: 98;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .contextmenu {
