Use twemoji for messages and emoji picker keeps emojis in messages looking at bit more faithful to discord, as well as a bit more uniform between platforms

--- a/ui/main.css
+++ b/ui/main.css
@@ -38,6 +38,13 @@ body {
     background: rgb(54, 57, 63);
 }
 
+img.emoji {
+   height: 1em;
+   width: 1em;
+   margin: 0 .05em 0 .1em;
+   vertical-align: -0.1em;
+}
+
 .sidenav {
     height: 100%;
     width: 72px;
